--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="img/style.css">
     <title>React App</title>
   </head>
   <body>
@@ -41,7 +42,7 @@
     -->
     <!-- Header -->
     <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-      <img class="w3-image" src="./W3.CSS Template_files/architect.jpg" alt="Architecture" width="1500" height="800">
+      <img class="w3-image" src="img/architect.jpg" alt="Architecture" width="1500" height="800">
       <div class="w3-display-middle w3-margin-top w3-center">
         <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
       </div>
@@ -59,25 +60,25 @@
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-            <img src="./W3.CSS Template_files/house5.jpg" alt="House" style="width:100%">
+            <img src="img/house5.jpg" alt="House" style="width:100%">
           </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-            <img src="./W3.CSS Template_files/house2.jpg" alt="House" style="width:100%">
+            <img src="img/house2.jpg" alt="House" style="width:100%">
           </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-            <img src="./W3.CSS Template_files/house3.jpg" alt="House" style="width:100%">
+            <img src="img/house3.jpg" alt="House" style="width:100%">
           </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-            <img src="./W3.CSS Template_files/house4.jpg" alt="House" style="width:100%">
+            <img src="img/house4.jpg" alt="House" style="width:100%">
           </div>
         </div>
       </div>
@@ -86,25 +87,25 @@
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-            <img src="./W3.CSS Template_files/house2.jpg" alt="House" style="width:99%">
+            <img src="img/house2.jpg" alt="House" style="width:99%">
           </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-            <img src="./W3.CSS Template_files/house5.jpg" alt="House" style="width:99%">
+            <img src="img/house5.jpg" alt="House" style="width:99%">
           </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-            <img src="./W3.CSS Template_files/house4.jpg" alt="House" style="width:99%">
+            <img src="img/house4.jpg" alt="House" style="width:99%">
           </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-            <img src="./W3.CSS Template_files/house3.jpg" alt="House" style="width:99%">
+            <img src="img/house3.jpg" alt="House" style="width:99%">
           </div>
         </div>
       </div>
@@ -120,28 +121,28 @@
 
       <div class="w3-row-padding w3-grayscale">
         <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="./W3.CSS Template_files/team2.jpg" alt="John" style="width:100%">
+          <img src="img/team2.jpg" alt="John" style="width:100%">
           <h3>John Doe</h3>
           <p class="w3-opacity">CEO &amp; Founder</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="./W3.CSS Template_files/team1.jpg" alt="Jane" style="width:100%">
+          <img src="img/team1.jpg" alt="Jane" style="width:100%">
           <h3>Jane Doe</h3>
           <p class="w3-opacity">Architect</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="./W3.CSS Template_files/team3.jpg" alt="Mike" style="width:100%">
+          <img src="img/team3.jpg" alt="Mike" style="width:100%">
           <h3>Mike Ross</h3>
           <p class="w3-opacity">Architect</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="./W3.CSS Template_files/team4.jpg" alt="Dan" style="width:100%">
+          <img src="img/team4.jpg" alt="Dan" style="width:100%">
           <h3>Dan Star</h3>
           <p class="w3-opacity">Architect</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -166,7 +167,7 @@
 
       <!-- Image of location/map -->
       <div class="w3-container">
-        <img src="./W3.CSS Template_files/map.jpg" class="w3-image" style="width:100%">
+        <img src="img/map.jpg" class="w3-image" style="width:100%">
       </div>
 
       <!-- End page content -->
@@ -179,6 +180,6 @@
     </footer>
 
 
-    <iframe src="./W3.CSS Template_files/start.html" style="display:none"></iframe>
+    <iframe src="img/start.html" style="display:none"></iframe>
   </body>
 </html>
